# LIGHTNING--Smashline-2-

./: Cargo.toml  Deadfall function replace.rs  Deadfall function replace.rs.tmp  install test plugin ryujinx.bat  install test plugin.bat
src/: fighters.rs  lib.rs
src/dynamics/: mod.rs  singletons.rs  ui.rs  util.rs
src/fighters/bayonetta/: mod.rs  opff.rs
src/fighters/brave/: opff.rs
src/fighters/buddy/: opff.rs
src/fighters/captain/: opff.rs
src/fighters/chrom/: opff.rs
src/fighters/cloud/: mod.rs  opff.rs
src/fighters/common/: mod.rs
src/fighters/daisy/: opff.rs
src/fighters/dedede/: opff.rs
src/fighters/demon/: opff.rs
src/fighters/diddy/: opff.rs
src/fighters/dolly/: opff.rs
src/fighters/donkey/: mod.rs  opff.rs
src/fighters/duckhunt/: opff.rs
src/fighters/edge/: opff.rs
src/fighters/eflame/: opff.rs
src/fighters/element/: mod.rs
src/fighters/elight/: opff.rs
src/fighters/falco/: opff.rs
src/fighters/fighter template/: opff.rs
src/fighters/fox/: mod.rs  opff.rs
src/fighters/gamewatch/: opff.rs
src/fighters/ganon/: opff.rs
src/fighters/gaogaen/: opff.rs
src/fighters/gekkouga/: opff.rs
src/fighters/ike/: opff.rs
src/fighters/inkling/: opff.rs
src/fighters/jack/: opff.rs
src/fighters/kamui/: mod.rs  opff.rs
src/fighters/ken/: opff.rs
src/fighters/kirby/: opff.rs
src/fighters/koopa/: opff.rs
src/fighters/koopajr/: opff.rs
src/fighters/krool/: opff.rs
src/fighters/link/: opff.rs
src/fighters/littlemac/: opff.rs
src/fighters/lucario/: opff.rs
src/utils/: mod.rs  singletons.rs  ui.rs  utils.rs
(+3782 files in other folders)
