[package]
name = "lightning_test"
version = "0.1.0"
authors = ["DECEPTICON"]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags = "1.3.2"
colorgrad = "0.6.2"
lazy_static = "1.4.0"
libc-nnsdk = "0.2.0"
modular-bitfield = "0.11.2"
once_cell = "1.15.0"
parking_lot = "0.11.2"
skyline = "0.2.1"
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
smashline = { git = "https://github.com/hdr-development/smashline.git" }
smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }
smash2 = { package = "smash", git = "https://github.com/blu-dev/smash-rs" }


[profile.dev]
panic = "abort"

[profile.release]
opt-level = 'z'
panic = "abort"
lto = true
codegen-units = 1